examples/test/testpolicy303.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy303
  namespace: namespace216
spec:
  podSelector:
    matchLabels:
      key13: value48
      key14: value47
      key21: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value2
          key49: value48
          key1: value45
      podSelector:
        matchLabels:
          key27: value7
          key43: value49
          key7: value6
